# routercommander

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum  routercommander.go
.github/: dependabot.yml
cmd/: BUILD.bazel  Makefile  collect.go  collect_test.go  pipeline.go  repro.go  repro_test.go  routercommander.go  routercommander_test.go  ssh.go  ssh_test.go
cmd/pkg/processor/: processor.go
cmd/pkg/types/: types.go
docs/: review_cleanup_plan.md  router_inventory_schema.md
pkg/log/: BUILD.bazel  logger.go
pkg/messenger/: BUILD.bazel  notifier.go
pkg/messenger/email/: BUILD.bazel  email_messenger.go
pkg/patterns/: BUILD.bazel  patterns.go  patterns_test.go
pkg/processor/: processor.go
pkg/types/: BUILD.bazel  commands.go  local.go  model.yaml  model_test.go  platform.go  platform_test.go  router.go  router_test.go  types.go  types_test.go
testdata/: asic_repro.yaml  asr9k-commands.yaml  collect.yaml  commands.txt  commands.yaml  commands_debug.yaml  commands_local_v2.yaml  commands_ncs6k.yaml  commands_reduced.txt  commands_v2.md  commands_v2.yaml  configure_ipv6.yaml  dish_healthcheck.yaml  ping_ipv6.yaml  repro.yaml  repro_grpc_listeners.yaml  repro_l2vpn_tmo_other_side.yaml  repro_l2vpn_tmo_uut.yaml  routers_inventory.yaml  show_cef.yaml  socket_watch.yaml  spitfire_debug.yaml  test.yaml
testdata/convergence/: drc_0.4.0.yaml  drc_0.4.0_populated.yaml  generic_0.4.0.yaml  set_values.sh
testdata/health_checks/: fretta_hc.yaml  fretta_hc_0.4.0.yaml  spitfire.yaml
testdata/pci_check/: 55a1.txt  pci_check.yaml  svs.txt
testdata/pci_read/: pci_read.yaml
testdata/qos_check/: asr9s_list.txt  qos_check.yaml
testdata/repro_flap/: flap.yaml
