module(
    name = "routercommander",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "github_com_sbezverk_tools", version = "0.0.0")
local_path_override(
    module_name = "github_com_sbezverk_tools",
    path = "../tools",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_charmbracelet_x_term",
    "com_github_go_test_deep",
    "com_github_golang_glog",
    "in_gopkg_yaml_v3",
    "org_golang_x_crypto",
)
