load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "routercommander_lib",
    srcs = [
        "pipeline.go",
        "routercommander.go",
        "ssh.go",
    ],
    importpath = "github.com/sbezverk/routercommander/cmd",
    deps = [
        "//pkg/log:log",
        "//pkg/messenger:messenger",
        "//pkg/messenger/email:email",
        "//pkg/types:types",
        "@com_github_charmbracelet_x_term//:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/knownhosts",
        "@in_gopkg_yaml_v3//:go_default_library",
    ],
)

go_binary(
    name = "routercommander",
    embed = [":routercommander_lib"],
)

go_test(
    name = "cmd_test",
    srcs = [
        "collect_test.go",
        "repro_test.go",
        "ssh_test.go",
    ],
    embed = [":routercommander_lib"],
    deps = [
        "//pkg/types:types",
        "@com_github_go_test_deep//:go_default_library",
        "@github_com_sbezverk_tools//sort:sort",
        "@org_golang_x_crypto//ssh",
    ],
)
