load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "email",
    srcs = ["email_messenger.go"],
    importpath = "github.com/sbezverk/routercommander/pkg/messenger/email",
    deps = [
        "//pkg/messenger:messenger",
        "@com_github_golang_glog//:go_default_library",
    ],
)
